<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home_black_24dp"/>
    <item
        android:id="@+id/nav_policies"
        android:title="@string/policies"
        android:icon="@drawable/ic_policies_black_24dp"/>
    <item
        android:id="@+id/nav_sell"
        android:title="@string/sell"
        android:icon="@drawable/ic_add_circle_black_24dp"/>
    <item
        android:id="@+id/nav_news"
        android:title="@string/news"
        android:icon="@drawable/ic_news_black_24dp"/>
    <item
        android:id="@+id/nav_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_person_black_24dp"/>


</menu>