<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/back1"
    android:orientation="vertical"
    android:padding="20dp">
    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sell"
        android:textSize="32sp"
        android:textColor="#000"
        android:textAlignment="center"
        android:layout_marginBottom="30dp"
        />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:entries="@array/crops_names"
        android:layout_marginBottom="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
    <EditText
        android:id="@+id/etWeight"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/enter_crops_weight"
        android:importantForAutofill="no" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/kg"
            android:textColor="#000"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        >
    <EditText
        android:id="@+id/etPrice"
        android:layout_width="200dp"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:hint="@string/enter_price"
        android:importantForAutofill="no" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/rs"
        android:textColor="#000"
        android:textSize="25sp"
        android:textStyle="bold" />
    </LinearLayout>
    <Button
        android:id="@+id/btnPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post"
        android:background="@drawable/btn_back_login"
        android:textColor="#fff"
        android:gravity="center"
        android:layout_gravity="center"

        />



</LinearLayout>