<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/main_back"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textAlignment="center"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textColor="#58f298"
        android:layout_marginBottom="80dp"
        />
    <LinearLayout
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:id="@+id/llOne"
        android:layout_below="@+id/tvAppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <Button
            android:id="@+id/btnRegister"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textAllCaps="true"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_register"
            android:textColor="#fff"
            android:background="@drawable/btn_back"
            />
        <Button
            android:id="@+id/btnLogin"
            android:padding="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textAllCaps="true"
            android:fontFamily="monospace"
            android:textStyle="bold"
            android:textColor="#fff"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_back_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_log_in"

            />

    </LinearLayout>

</RelativeLayout>